# data_readiness

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/test/: 20250520-hacp-company-data_domains_schema.csv  20250520-hacp-company-data_domains_schema.json
data/test/c001_bamfurlong/: 20250524-hacp-c001_bamfurlong-data_domains.json  20250524-hacp-c001_bamfurlong-data_domains_schema.json  20250524-hacp-c001_bamfurlong-kpi_details.json  20250524-hacp-c001_bamfurlong-linkedin-profile.txt
docs/: general_navigation.md
moria_engine/analysis/: # Moria Data Readiness Engine.md  data_transformers.py  graph_explainer.py  graph_visualizer.py
moria_engine/config/: settings.py
moria_engine/data/: loaders.py
moria_engine/models/: network_characterization.py
notebooks/: 2025-hacp-mal-data-readiness-v.0.0.ipynb  20250524-moria-schema-analysis-dev-notebook.v.0.0-c001.ipynb  20250524-moria-schema-analysis-dev-notebook.v.0.0-c002.ipynb  20250524-moria-schema-analysis-dev-notebook.v.0.0.ipynb  20250524-moria-schema-kpi-analysis-dev-notebook.v.0.0-c001.ipynb  20250524-moria-schema-kpi-analysis-dev-notebook.v.0.0-c002.ipynb  20250524-moria-schema-kpi-analysis-dev-notebook.v.0.0.ipynb  20250524-moria-schema-kpi-analysis-dev-notebook.v.0.1-c001.ipynb  20250601-moria-schema-kpi-analysis-dev-notebook.v.0.1-c003.ipynb  20250601-moria-schema-kpi-analysis-dev-notebook.v.0.1-c003a.ipynb
src/data_readiness_engine/pipelines/: data_ingestion.py
tests/: test_analysis.py  test_global.py  test_loaders.py
venv_mal_data_readiness/: pyvenv.cfg
venv_mal_dev/: pyvenv.cfg
(+25 files in other folders)
